fix flicker

--- a/assets/base.css
+++ b/assets/base.css
@@ -3283,6 +3283,10 @@ details-disclosure > details {
     opacity: 0.1;
   }
 
+  .scroll-trigger.animate--slide-in {
+    transform: translateY(2rem);
+  }
+
   .scroll-trigger:not(.scroll-trigger--offscreen).animate--fade-in {
     opacity: 1;
     animation: var(--animation-fade-in);
